# Function-of-Linux-C

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.txt
Test/pthread_mutex/: pthread_mutex  pthread_mutex.c  pthread_normal.c  testfile.txt
character_function/: CMakeLists.txt  character_function_test.c
character_function/include/: character_function.h
character_function/src/: character_function.c
data_exchange_function/: CMakeLists.txt  data_exchange_function_test.c
data_exchange_function/include/: data_exchange_function.h
data_exchange_function/src/: data_exchange_function.c
multithreading_function/: CMakeLists.txt  Makefile  multithreading_function_test.c
multithreading_function/include/: multithreading_function.h
multithreading_function/src/: multithreading_function.c
process_string_function/: CMakeLists.txt  Makefile  output  process_string_function_test.c
process_string_function/include/: process_string_function.h
process_string_function/src/: process_string_function.c
pthread_function/: CMakeLists.txt  pthread_function_test.c
pthread_function/include/: pthread_function.h
pthread_function/src/: pthread_function.c
utils/include/: array_utils.h
